<resources>
    <string name="app_name">CRONOMETRO</string>
    <string name="Suma">SUMA</string>
    <string name="Resta">RESTA</string>
    <string name="Multiplicacion">MULTIPLICACION</string>
    <string name="Division">DIVISION</string>
    <string name="hintnumerotext">Escriba un numero</string>

    <string name="action_settings">Settings</string>
    <string name="cronodefault">00:00:00</string>
    <string name="tempodefault">00:00</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_c_r_o_n_o_m_e_t_r_o">CRONOMETRO</string>
</resources>